// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders correctly 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "display": "inline-flex",
      "position": "relative",
    }
  }
>
  <input
    className="sc-bwzfXH jgDkZo sc-bdVaJa dqCPZy"
    role="button"
    type="button"
    value="Primary"
  />
</div>
`;

exports[`Button Secondary Renders correctly 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "display": "inline-flex",
      "position": "relative",
    }
  }
>
  <input
    className="sc-htpNat fcsfBF sc-bdVaJa dqCPZy"
    role="button"
    type="button"
    value="Secondary"
  />
</div>
`;
